--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,19 +12,43 @@ variables:
   GL_REPO: "/repos/gitlab"
   IMAGE_NAME: "gitlab-com-migrations:${GL_SHA}"
 
-image:build:
+image:gitlab:
   stage: prepare
   tags:
     - builder
   variables:
     IMAGE_PATH: "/docker-builds/${IMAGE_NAME}"
   script:
-    - mkdir /docker-builds
+    - mkdir -p /docker-builds
     - docker build --build-arg GL_SHA=${GL_SHA} -t ${IMAGE_NAME} .
     - docker save -o ${IMAGE_PATH}
     - cat ${IMAGE_PATH} | bzip2 - | ssh $MIGRATOR_HOST "bunzip2 | docker load -"
 
-db:migrations:
+image:redis:
+  stage: prepare
+  tags:
+    - builder
+  variables:
+    IMAGE_NAME: "redis:4.0-alpine"
+    IMAGE_PATH: "/docker-builds/${IMAGE_NAME}"
+  script:
+    - docker pull $IMAGE_NAME
+    - docker save -o ${IMAGE_PATH}
+    - cat ${IMAGE_PATH} | bzip2 - | ssh $MIGRATOR_HOST "bunzip2 | docker load -"
+
+image:postgres:
+  stage: prepare
+  tags:
+    - builder
+  variables:
+    IMAGE_NAME: "postgres:11.6"
+    IMAGE_PATH: "/docker-builds/${IMAGE_NAME}"
+  script:
+    - docker pull $IMAGE_NAME
+    - docker save -o ${IMAGE_PATH}
+    - cat ${IMAGE_PATH} | bzip2 - | ssh $MIGRATOR_HOST "bunzip2 | docker load -"
+
+db:status:
   stage: migrations
   image: $IMAGE_NAME
   tags:
