--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ image:gitlab:
   script:
     - mkdir -p /docker-builds
     - docker build --build-arg GL_SHA=${GL_SHA} -t ${IMAGE_NAME} .
-    - docker save -o ${IMAGE_PATH}
+    - docker save -o ${IMAGE_NAME} {IMAGE_PATH}
     - cat ${IMAGE_PATH} | bzip2 - | ssh $MIGRATOR_HOST "bunzip2 | docker load -"
 
 image:redis:
@@ -32,8 +32,9 @@ image:redis:
     IMAGE_NAME: "redis:4.0-alpine"
     IMAGE_PATH: "/docker-builds/${IMAGE_NAME}"
   script:
+    - mkdir -p /docker-builds
     - docker pull $IMAGE_NAME
-    - docker save -o ${IMAGE_PATH}
+    - docker save -o ${IMAGE_NAME} {IMAGE_PATH}
     - cat ${IMAGE_PATH} | bzip2 - | ssh $MIGRATOR_HOST "bunzip2 | docker load -"
 
 image:postgres:
@@ -44,8 +45,9 @@ image:postgres:
     IMAGE_NAME: "postgres:11.6"
     IMAGE_PATH: "/docker-builds/${IMAGE_NAME}"
   script:
+    - mkdir -p /docker-builds
     - docker pull $IMAGE_NAME
-    - docker save -o ${IMAGE_PATH}
+    - docker save -o ${IMAGE_NAME} {IMAGE_PATH}
     - cat ${IMAGE_PATH} | bzip2 - | ssh $MIGRATOR_HOST "bunzip2 | docker load -"
 
 db:status:
