--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,7 @@ image:gitlab:
   script:
     - mkdir -p /docker-builds
     - docker build --build-arg GL_SHA=${GL_SHA} -t ${IMAGE_NAME} .
+    - echo docker save -o ${IMAGE_PATH} {IMAGE_NAME}
     - docker save -o ${IMAGE_PATH} {IMAGE_NAME}
     - cat ${IMAGE_PATH} | bzip2 - | ssh $MIGRATOR_HOST "bunzip2 | docker load"
 
