--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,9 +20,10 @@ image:gitlab:
     IMAGE_PATH: "/docker-builds/${IMAGE_NAME}.tgz"
   script:
     - mkdir -p /docker-builds
+    - echo Building ${IMAGE_NAME}
     - docker build --build-arg GL_SHA=${GL_SHA} -t ${IMAGE_NAME} .
-    - echo docker save -o ${IMAGE_PATH} {IMAGE_NAME}
-    - docker save -o ${IMAGE_PATH} {IMAGE_NAME}
+    - echo docker save -o ${IMAGE_PATH} ${IMAGE_NAME}
+    - docker save -o ${IMAGE_PATH} ${IMAGE_NAME}
     - cat ${IMAGE_PATH} | bzip2 - | ssh $MIGRATOR_HOST "bunzip2 | docker load"
 
 image:redis:
@@ -35,7 +36,7 @@ image:redis:
   script:
     - mkdir -p /docker-builds
     - docker pull $IMAGE_NAME
-    - docker save -o ${IMAGE_PATH} {IMAGE_NAME}
+    - docker save -o ${IMAGE_PATH} ${IMAGE_NAME}
     - cat ${IMAGE_PATH} | bzip2 - | ssh $MIGRATOR_HOST "bunzip2 | docker load"
 
 image:postgres:
@@ -48,7 +49,7 @@ image:postgres:
   script:
     - mkdir -p /docker-builds
     - docker pull $IMAGE_NAME
-    - docker save -o ${IMAGE_PATH} {IMAGE_NAME}
+    - docker save -o ${IMAGE_PATH} ${IMAGE_NAME}
     - cat ${IMAGE_PATH} | bzip2 - | ssh $MIGRATOR_HOST "bunzip2 | docker load"
 
 db:status:
