--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,22 +12,25 @@ variables:
   GL_REPO: "/repos/gitlab"
   IMAGE_NAME: "gitlab-com-migrations:${GL_SHA}"
 
-image:gitlab:
+.image:base:
   stage: prepare
   tags:
     - builder
+  script:
+    - apt-get install -y pv
+
+image:gitlab:
+  extends: .image:base
   variables:
     IMAGE_PATH: "/docker-builds/${IMAGE_NAME}.tgz"
   script:
     - mkdir -p /docker-builds
     - echo Building ${IMAGE_NAME}
     - docker build --build-arg GL_SHA=${GL_SHA} -t ${IMAGE_NAME} .
-    - docker save ${IMAGE_NAME} | bzip2 - | ssh $MIGRATOR_HOST "bunzip2 | docker load"
+    - docker save ${IMAGE_NAME} | bzip2 - | pv -i 10 | ssh $MIGRATOR_HOST "bunzip2 | docker load"
 
 image:redis:
-  stage: prepare
-  tags:
-    - builder
+  extends: .image:base
   variables:
     IMAGE_NAME: "redis:4.0-alpine"
     IMAGE_PATH: "/docker-builds/${IMAGE_NAME}.tgz"
@@ -37,9 +40,7 @@ image:redis:
     - docker save ${IMAGE_NAME} | bzip2 - | ssh $MIGRATOR_HOST "bunzip2 | docker load"
 
 image:postgres:
-  stage: prepare
-  tags:
-    - builder
+  extends: .image:base
   variables:
     IMAGE_NAME: "postgres:11.6"
     IMAGE_PATH: "/docker-builds/${IMAGE_NAME}.tgz"
