--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ variables:
   RAILS_ENV: "test"
   BUILD_PATH: "/builds/gitlab"
   GL_REPO: "/repos/gitlab"
-  IMAGE_NAME: "gitlab-com-migrations:${GL_SHA}"
+  IMAGE_NAME: "${DOCKER_REGISTRY}:gitlab-com-migrations:${GL_SHA}"
 
 .image:base:
   stage: prepare
@@ -19,33 +19,32 @@ variables:
 
 image:gitlab:
   extends: .image:base
-  variables:
-    IMAGE_PATH: "/docker-builds/${IMAGE_NAME}.tgz"
   script:
     - mkdir -p /docker-builds
     - echo Building ${IMAGE_NAME}
     - docker build --build-arg GL_SHA=${GL_SHA} -t ${IMAGE_NAME} .
-    - docker save ${IMAGE_NAME} | bzip2 - | ssh -vv $MIGRATOR_HOST 'bunzip2 | docker load'
+    - docker push ${IMAGE_NAME}
 
 image:redis:
   extends: .image:base
   variables:
     IMAGE_NAME: "redis:4.0-alpine"
-    IMAGE_PATH: "/docker-builds/${IMAGE_NAME}.tgz"
   script:
     - mkdir -p /docker-builds
     - docker pull $IMAGE_NAME
-    - docker save ${IMAGE_NAME} | bzip2 - | ssh $MIGRATOR_HOST 'bunzip2 | docker load'
+    - docker tag -t ${DOCKER_REGISTRY}:${IMAGE_NAME} ${IMAGE_NAME}
+    - docker push ${DOCKER_REGISTRY}:${IMAGE_NAME}
+
 
 image:postgres:
   extends: .image:base
   variables:
     IMAGE_NAME: "postgres:11.6"
-    IMAGE_PATH: "/docker-builds/${IMAGE_NAME}.tgz"
   script:
     - mkdir -p /docker-builds
     - docker pull $IMAGE_NAME
-    - docker save ${IMAGE_NAME} | bzip2 - | ssh $MIGRATOR_HOST 'bunzip2 | docker load'
+    - docker tag -t ${DOCKER_REGISTRY}:${IMAGE_NAME} ${IMAGE_NAME}
+    - docker push ${DOCKER_REGISTRY}:${IMAGE_NAME}
 
 db:status:
   stage: migrations
