--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ variables:
   RAILS_ENV: "test"
   BUILD_PATH: "/builds/gitlab"
   GL_REPO: "/repos/gitlab"
-  IMAGE_NAME: "${DOCKER_REGISTRY}:gitlab-com-migrations:${GL_SHA}"
+  IMAGE_NAME: "gitlab-com-migrations:${GL_SHA}"
 
 .image:base:
   stage: prepare
@@ -23,7 +23,8 @@ image:gitlab:
     - mkdir -p /docker-builds
     - echo Building ${IMAGE_NAME}
     - docker build --build-arg GL_SHA=${GL_SHA} -t ${IMAGE_NAME} .
-    - docker push ${IMAGE_NAME}
+    - docker tag ${IMAGE_NAME} ${DOCKER_REGISTRY}:${IMAGE_NAME}
+    - docker push ${DOCKER_REGISTRY}:${IMAGE_NAME}
 
 image:redis:
   extends: .image:base
@@ -34,7 +35,6 @@ image:redis:
     - docker pull $IMAGE_NAME
     - docker tag -t ${DOCKER_REGISTRY}:${IMAGE_NAME} ${IMAGE_NAME}
     - docker push ${DOCKER_REGISTRY}:${IMAGE_NAME}
-
 
 image:postgres:
   extends: .image:base
