--- a/docker/gitlab/Dockerfile
+++ b/docker/gitlab/Dockerfile
@@ -5,9 +5,13 @@ ARG GL_SHA
 
 ENV RAILS_ENV=test
 
+
 WORKDIR $GL_REPO
 RUN git clone --progress https://gitlab.com/gitlab-org/gitlab.git $GL_REPO
 RUN bundle install
+
+# TODO: Move this up
+RUN apt-get update; apt-get -y install iptables
 
 RUN git fetch origin $GL_SHA
 RUN git reset --hard origin/${GL_SHA}
