--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,7 +38,7 @@ image:dblab-ssh:
 image:redis:
   extends: .image:base
   variables:
-    IMAGE_NAME: "docker.io/library/redis:4.0-alpine"
+    IMAGE_NAME: "redis:4.0-alpine"
   script:
     - docker pull $IMAGE_NAME
     - docker tag ${IMAGE_NAME} ${DOCKER_REGISTRY}/${IMAGE_NAME}
@@ -47,7 +47,7 @@ image:redis:
 image:postgres:
   extends: .image:base
   variables:
-    IMAGE_NAME: "docker.io/library/postgres:11.6"
+    IMAGE_NAME: "postgres:11.6"
   script:
     - docker pull $IMAGE_NAME
     - docker tag ${IMAGE_NAME} ${DOCKER_REGISTRY}/${IMAGE_NAME}
@@ -59,9 +59,9 @@ db:status:
   tags:
     - worker
   services:
-    - name: postgres:11.6
+    - name: ${DOCKER_REGISTRY}/postgres:11.6
       command: ["postgres", "-c", "fsync=off", "-c", "synchronous_commit=off", "-c", "full_page_writes=off"]
-    - name: redis:4.0-alpine
+    - name: ${DOCKER_REGISTRY}/redis:4.0-alpine
   variables:
     POSTGRES_HOST_AUTH_METHOD: trust
   script:
