--- a/docker/dblab-ssh/Dockerfile
+++ b/docker/dblab-ssh/Dockerfile
@@ -13,5 +13,7 @@ ENV DBLAB_SSH_KEY=unset
 RUN groupadd -r dblab && useradd -r -g dblab dblab
 USER dblab
 
+EXPOSE 5432
+
 COPY entrypoint.sh /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh", "--"]
