--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,16 +59,16 @@ db:status:
   tags:
     - worker
   services:
-    - name: ${DOCKER_REGISTRY}/postgres:11.6
-      command: ["postgres", "-c", "fsync=off", "-c", "synchronous_commit=off", "-c", "full_page_writes=off"]
+    - name: ${DOCKER_REGISTRY}/gitlab-com-migrations-dblab-ssh:latest
     - name: ${DOCKER_REGISTRY}/redis:4.0-alpine
   variables:
     POSTGRES_HOST_AUTH_METHOD: trust
   script:
     - env
     - ls -l
-    - source scripts/utils.sh
-    - source scripts/prepare_build.sh
+    - ./prepare.sh
+    - cat config/database.yml
+    - curl -v https://google.com
     - rake db:migrate:status
 
 dblab:
