--- a/docker/dblab-ssh/Dockerfile
+++ b/docker/dblab-ssh/Dockerfile
@@ -14,7 +14,7 @@ COPY entrypoint.sh /entrypoint.sh
 RUN chmod uga+x /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh", "--"]
 
-RUN groupadd -r dblab && useradd -r -g dblab dblab
+RUN groupadd -r dblab && useradd -m -r -g dblab dblab
 USER dblab
 
 EXPOSE 5432
