--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,13 +64,13 @@ db:status:
     - name: ${DOCKER_REGISTRY}/redis:4.0-alpine
       alias: redis
   variables:
-    - DBLAB_SSH_KEY
-    - DBLAB_HOST_KEYS
-    - DBLAB_USER
-    - DBLAB_PASSWORD
-    - DBLAB_SSH_HOST
-    - DBLAB_ENVIRONMENT
-    - DBLAB_TOKEN
+    DBLAB_SSH_KEY: ""
+    DBLAB_HOST_KEYS: ""
+    DBLAB_USER: ""
+    DBLAB_PASSWORD: ""
+    DBLAB_SSH_HOST: ""
+    DBLAB_ENVIRONMENT: ""
+    DBLAB_TOKEN: ""
   script:
     - env
     - ls -l
