--- a/docker/gitlab/Dockerfile
+++ b/docker/gitlab/Dockerfile
@@ -14,7 +14,8 @@ USER gitlab
 WORKDIR $GL_REPO
 
 RUN git clone --progress https://gitlab.com/gitlab-org/gitlab.git $GL_REPO
-#RUN bundle config set deployment 'true'
+RUN bundle config set deployment 'true'
+RUN bundle config set clean 'true'
 RUN bundle install --clean --jobs=$(nproc) --path=vendor --retry=3 --without=development --quiet
 RUN git fetch origin $GL_SHA
 RUN git reset --hard origin/${GL_SHA}
