--- a/docker/gitlab/Dockerfile
+++ b/docker/gitlab/Dockerfile
@@ -19,11 +19,11 @@ RUN bundle config set clean 'true'
 RUN bundle config set jobs $(nproc)
 RUN bundle config set path vendor
 RUN bundle config set retry 3
-RUN bundle config
 RUN bundle install
 RUN git fetch origin $GL_SHA
 RUN git reset --hard origin/${GL_SHA}
-RUN bundle install --clean --jobs=$(nproc) --path=vendor --retry=3 --without=development --quiet
+RUN bundle install
+RUN bundle check
 
 # Codebase patching
 USER gitlab
