--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -74,8 +74,7 @@ db:migrations:
   script:
     - cd ${GITLAB_PATH}
     - ./prepare.sh
-    - bundle exec rake gitlab:db:migration_testing
-    - mkdir -p ${CI_PROJECT_DIR}/artifacts; mv ${GITLAB_PATH}/tmp/migration-stats.json ${CI_PROJECT_DIR}
+    - bundle exec rake gitlab:db:migration_testing[${CI_PROJECT_DIR}/migration-stats.json]
 
 notify-upstream:
   stage: final
