--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -82,4 +82,4 @@ notify-upstream:
   script:
     - cd notifier
     - bundle install
-    - bundle exec ruby send_notification.rb ../migration-stats.json
+    - bundle exec ruby notifier.rb send ../migration-stats.json
