Add artifact links

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,6 +79,12 @@ notify-upstream:
   needs:
     - job: db:migrations
       artifacts: true
+  # Also store artifacts here so we can easily generate direct links to them
+  artifacts:
+    paths:
+      - migration-stats.json
+    expire_in: 4 weeks
+    when: always
   script:
     - cd notifier
     - bundle install
